--- a/.gitignore
+++ b/.gitignore
@@ -10,3 +10,5 @@ data/.DS_Store
 data/image-data/.DS_Store
 data-builders/.DS_Store
 data-builders/csv-builders/image-names.js
+buildTrainData.py
+__pycache__/buildTrainData.cpython-39.pyc
